src/styles/Home.module.css
.container {
  vertical-align: top;
  min-height: 102vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  z-index: 1;
  background-color: #28282B;
  overflow: hidden;
}

.linkedin {
  position: relative;
  top: 0.1em;
  margin-right: 1vw;
}

.github {
  position: relative;
  top: 0.1em;
}

.title a {
  color: white;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0 0 1rem;
  line-height: 1.15;
  font-size: 3.6rem;
}

.title {
  text-align: center;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  flex-basis: 45%;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition:
    color 0.15s ease,
    border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
}

@media (max-width: 900px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
  .container {
    flex-direction: column;
  }
  .aboutexperience {
    flex-direction: row;
  }
}

.developer {
  position: absolute;
  top: 0px;
}

.rotate {
  transform: rotate3d(1, 0, 0, -70deg);
  top: -30rem;
  margin-left: 7vw;
  margin-bottom: 0vh;
  z-index : 1;
  position: relative;
}

.fadein {
  opacity: 0;
  transition: opacity 0.5s ease-in;
}

.fadein.appear {
  opacity: 1;
  transition: opacity 1s ease-in;
}

.site-logo {
  font-weight: 900;
  font-size: 0.8rem;
  color: var(--text);
  text-decoration: none;
  position: absolute;
}

.header {
  --text: #f4f4f4;
  --text-inverse: #333;
  --background: transparent;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 998;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 3vh 3vh 3vh 3vh;
  transition: background 200ms ease-in;
  background: var(--background);
  color: var(--text);
}

.header.scrolled {
  --background: #28282ba1;
}

.nav__list {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

.nav__link {
  --spacing: 1em;
  text-decoration: none;
  color: white;
  display: inline-block;
  padding: calc(var(--spacing) / 2) var(--spacing);
  position: relative;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 0.9rem;
}

.homeintro {
  background-size: cover !important;
  background-position: center !important;
  background-blend-mode: soft-light !important;
  color: rgba(255, 255, 255, 1.0);
  text-align: center;
  width: 110%;
  height: 120vh;
  z-index: 1;
  position: absolute;
  top: -20vh;
  overflow: visible;
  transition: background 400ms ease-in-out, color 2ms ease-in-out;
}

.homeintro.background {
  background: #28282B !important;
  color: #28282B !important;
  transition: none;
}
.first {
  background-color: #28282B;
  transition: background-color 1s ease-in-out;
  text-align: center;
  font-family: "Roboto", sans-serif;
  justify-content: center;
  overflow: visible;
}

.first.show {
  background-color: #FAF9F6;
  transition: background-color 2s ease-in-out;
}

.site_logo {
  font-weight: 700;
  font-size: 0.8rem;
  color: var(--text);
  text-decoration: none;
  margin-right: 1vw;
}

.intro {
  height: 85vh;
  margin: 0 auto;
  background: transparent;
  z-index: 1;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.introname {
  margin: 0 0 0 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-size: 3.8rem;
  font-weight: 80;
  letter-spacing: 2vw;
  color: #f4f4f4;
  position: relative;
  text-transform: uppercase;
  top: 19%;
  left: 0vh;
  text-align: center;
}

.introsub {
  list-style: none;
  text-decoration: none;
  color: #f4f4f4;
  margin: 0.5vh 0 0.5vh 0;
  margin-right: auto;
  padding: 1.5vh 1vh 1.5vh 1vh;
  position: relative;
  font-family: "Roboto" sans-serif;
  font-weight: 300;
  font-size: 2rem;
  letter-spacing: 0.1rem;
  top: 18vh;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  opacity: 0;
  transition: opacity 0.5s ease-in-out, text-shadow 0.4s ease-in-out;;
}

.introsub.show {
  opacity: 1;
}

.introsub:hover {
  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
  transition: text-shadow 0.2s ease-in-out;
}

.title {
  margin: 0 0 0 0;
  line-height: 1.15;
  font-size: 15vh;
  position: absolute;
  font-family: "Roboto" sans-serif;
  font-weight: 100;
  background-color: transparent;
  padding: 0 0 0 0;
  z-index: 1;
  pointer-events: none;
  color: white;
  transition: font-size 1s ease-in, color 1s ease-in, top 1s ease-in, margin 1s ease-in;
}

.title.show {
  font-size: 4rem;
  top: 8vw;
  color: #28282B;
  padding: 0 0 0 0;
  transition: font-size 2s ease-in, color 2s ease-in, top 2s ease-in, margin 2s ease-in;
}

.about {
  background: #28282B;
}

.aboutme {
  position: relative;
  font-weight: 300;
  color: #28282B;
  top: 6vh;
  left: -150vh;
  opacity: 0;
  font-size: 0em;
  transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out, font-size 0.5s ease-in-out;
}

.aboutme.show {
  left: 0vh;
  opacity: 1;
  font-size: 1.5em;
  transition: left 2.7s ease-in-out, opacity 2.7s ease-in-out;
}

.aboutexperience {
  position: relative;
  top: 3rem;
  left: 2rem;
  display: flex;
  flex-direction: row;
  color: #28282B;
  gap: 4rem;
  text-align: left;
  font-size: 1.1rem;
  font-weight: 200;
}

.table {
  position: relative;
  top: -1.5rem;
  border-collapse: separate;
  border-spacing: 1.2rem;
}

.abouttitle {
  color: #28282B;
  font-size: 2.2rem;
  font-weight: 300;
}
/* ... */

